--- a/index.html
+++ b/index.html
@@ -5,9 +5,135 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/index.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <title>Document</title>
 </head>
 <body>
+    <!-- HEADER -->
+    <header class="">
+        <!-- 헤더 메인 네비게이션 -->
+        <section class="navbar">
+            <div class="logo">
+                ZIPFLIX
+            </div>
+            <div class="nav">
+                <ul>
+                    <li><a href="./index.html">Home</a></li>
+                    <li><a href="./html/about.html">About</a></li>
+                    <li><a href="./html/mypage.html">My page</a></li>
+                </ul>
+            </div>
+            <div class="account">
+                <div class="avatar"></div>
+                <div class="userID">USER ID</div>
+            </div>
+            <div class="mode">
+                <span class="material-symbols-outlined toggle-on show">toggle_on</span>
+                <span class="material-symbols-outlined toggle-off">toggle_off</span>
+            </div>
+          </div>
+            <div class="ham-btn">
+                <span class="material-symbols-outlined">menu</span>
+            </div>
+        </section>
+    </header>
+
+    <!-- MAIN -->
+    <main>
+        <section class="main-coment">
+            <div class="coment">
+                <h1>언제 어디서나 자유롭게 지금 인기있는 영화를 검색해보세요.</h1>
+                <p>인기있는 영화를 나만의 리스트로 만들어보세요!</p>
+            </div>
+        </section>
+        <section class="main-scroll">
+            <div class="scroll-container">
+                <div class="btns">
+                    <button class="left"><span class="material-symbols-outlined">keyboard_double_arrow_left</span></button>
+                    <button class="right"><span class="material-symbols-outlined">keyboard_double_arrow_right</span></button>
+                </div>
+                <div class="item-container">
+                    <div class="item">
+                        <div class="item-img"></div>
+                        <div class="item-content">
+                            <h3>movies title</h3>
+                            <p>개봉일</p>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="item-img"></div>
+                        <div class="item-content">
+                            <h3>movies title</h3>
+                            <p>개봉일</p>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="item-img"></div>
+                        <div class="item-content">
+                            <h3>movies title</h3>
+                            <p>개봉일</p>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="item-img"></div>
+                        <div class="item-content">
+                            <h3>movies title</h3>
+                            <p>개봉일</p>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="item-img"></div>
+                        <div class="item-content">
+                            <h3>movies title</h3>
+                            <p>개봉일</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="register-btns">
+            <div class="btns">
+                <button><a href="./html/login.html">로그인</a></button>
+                <button><a href="./html/register.html">회원가입</a></button>
+                <button><a href="./html/search.html">검색하기</a></button>
+            </div>
+        </section>
+    </main>
+
+    <!-- FOOTER -->
+    <footer>
+        <section class="footer-container">
+            <div class="left">
+                <div class="logo">
+                    <h1>ZIPFLIX</h1>
+                </div>
+            </div>
+            <div class="mid">
+                <ul>
+                    <li>고객 센터</li>
+                    <li>미디어 센터</li>
+                    <li>이용약관</li>
+                    <li>쿠키설정</li>
+                    <li>문의하기</li>
+                    <li>법적고지</li>
+                    <li>계정</li>
+                    <li>자주 묻는 질문</li>
+                </ul>
+            </div>
+            <div class="right">
+                <ul>
+                    <li>ZIPFLIX KOREA</li>
+                    <li>통신판매업신고번호: 제2023-가나다라-0000호</li>
+                    <li>전화번호: 000-000-0000</li>
+                    <li>대표: 홍길동</li>
+                    <li>이메일: zipflix@official.com</li>
+                    <li>주소: 대전광역시 서구 둔산동 </li>
+                    <li>사업자등록번호: 000-00-00000</li>
+                </ul>
+            </div>
+        </section>
+    </footer>
+    <script src="./js/scroll.js"></script>
     <script src="./index.js"></script>
 </body>
 </html>
