--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </div>
             <div class="account">
                 <div class="avatar"></div>
-                <div class="userID">USER ID</div>
+                <div class="userID"></div>
             </div>
             <div class="mode">
                 <span class="material-symbols-outlined toggle-on show">toggle_on</span>
