--- a/html/login.html
+++ b/html/login.html
@@ -97,6 +97,7 @@
         </section>
     </footer>
     <script src="../js/scroll.js"></script>
+    <script src="../js/global.js"></script>
     <script src="../js/login.js"></script>
 </body>
 </html>
