--- a/html/search.html
+++ b/html/search.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="../css/register.css">
+    <link rel="stylesheet" href="../css/search.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 <body>
      <!-- HEADER -->
-     <header>
+     <header class="">
         <!-- 헤더 메인 네비게이션 -->
         <section class="navbar">
             <div class="logo">
@@ -40,42 +40,78 @@
 
     <!-- MAIN -->
     <main>
-       <div class="register-form">
-        <fieldset>
-            <legend>회원가입</legend>
-            <div class="forms">
-                <ul>
-                    <li class="name">
-                        <label for="name">이름</label>
-                        <input type="text" name="name" id="name" placeholder="이름을 입력해주세요."><br>
-                        <div id="nameError" class="error"></div>
-                    </li>
-                    <li class="email">
-                        <label for="email">email</label>
-                        <input type="text" name="email" id="email" placeholder="이메일을 입력해주세요."><br>
-                        <div id="emailError" class="error"></div>
-                    </li>
-                    <li class="userId">
-                        <label for="userId">닉네임</label>
-                        <input type="text" name="userId" id="userId" placeholder="사용할 닉네임을 입력해주세요."><br>
-                        <div id="userIdError" class="error"></div>
-                    </li>
-                    <li class="password">
-                        <label for="password">비밀번호</label>
-                        <input type="password" name="password" id="password" placeholder="비밀번호를 입력해주세요"><br>
-                        <div id="passwordError" class="error"></div>
-                    </li>
-                    <li class="passwordCheck">
-                        <label for="passwordCheck">비밀번호 확인</label>
-                        <input type="password" name="passwordCheck" id="passwordCheck" placeholder="비밀번호를 다시 입력해주세요.">
-                        <div id="passwordCheckError" class="error">비밀번호가 일치하지 않습니다.</div>
-                    </li>
-                </ul>
+       <div class="search-container">
+        <div class="search-bar">
+            <input type="text" placeholder="검색어를 입력하세요.">
+            <button>검색</button>
+        </div>
+        <div class="result-container">
+            <div class="result-item">
+                <div class="item-img">
+                    <img src="../asset/imgs/movies_01.jpg" alt="">
+                </div>
+                <div class="item-detail">
+                    <h3>LA LA LAND</h3>
+                    <p>release</p>
+                </div>
             </div>
-            <div class="submit-btn">
-                <button type="submit">가입하기</button>
+            <div class="result-item">
+                <div class="item-img"></div>
+                <div class="item-detail">
+                    <h3>title</h3>
+                    <p>release</p>
+                </div>
             </div>
-        </fieldset>
+            <div class="result-item">
+                <div class="item-img"></div>
+                <div class="item-detail">
+                    <h3>title</h3>
+                    <p>release</p>
+                </div>
+            </div>
+            <div class="result-item">
+                <div class="item-img"></div>
+                <div class="item-detail">
+                    <h3>title</h3>
+                    <p>release</p>
+                </div>
+            </div>
+            <div class="result-item">
+                <div class="item-img"></div>
+                <div class="item-detail">
+                    <h3>title</h3>
+                    <p>release</p>
+                </div>
+            </div>
+            <div class="result-item">
+                <div class="item-img"></div>
+                <div class="item-detail">
+                    <h3>title</h3>
+                    <p>release</p>
+                </div>
+            </div>
+            <div class="result-item">
+                <div class="item-img"></div>
+                <div class="item-detail">
+                    <h3>title</h3>
+                    <p>release</p>
+                </div>
+            </div>
+            <div class="result-item">
+                <div class="item-img"></div>
+                <div class="item-detail">
+                    <h3>title</h3>
+                    <p>release</p>
+                </div>
+            </div>
+            <div class="result-item">
+                <div class="item-img"></div>
+                <div class="item-detail">
+                    <h3>title</h3>
+                    <p>release</p>
+                </div>
+            </div>
+        </div>
        </div>
     </main>
     <!-- FOOTER -->
@@ -113,6 +149,6 @@
     </footer>
     <script src="../js/scroll.js"></script>
     <script src="../js/global.js"></script>
-    <script src="../js/register.js"></script>
+    <script src="../js/search.js"></script>
 </body>
 </html>
