개인정보 페이지 수정

--- a/html/mypage.html
+++ b/html/mypage.html
@@ -45,7 +45,7 @@
             <!-- 개인 정보 -->
             <div class="detail-container">
                 <span>나의 정보</span>
-                <span class="material-symbols-outlined">expand_more</span>
+                <span class="material-symbols-outlined open-btn">expand_more</span>
             </div>
             <div class="details">
                 <ul>
@@ -73,7 +73,7 @@
             <!-- 개인 영화 리스트 -->
             <div class="personal-list">
                 <span>나의 영화 목록</span>
-                <span class="material-symbols-outlined">expand_more</span>
+                <span class="material-symbols-outlined open-btn">expand_more</span>
             </div>
             <div class="list-items">
                 <ul>
@@ -144,6 +144,6 @@
     </footer>
     <script src="../js/scroll.js"></script>
     <script src="../js/global.js"></script>
-    <script src="../js/about.js"></script>
+    <script src="../js/mypage.js"></script>
 </body>
 </html>
